--- a/todo/style.css
+++ b/todo/style.css
@@ -1,2 +1,12 @@
+.content {
+  opacity: 0;
+  transition: opacity 1s ease-in; }
+
+.loaded {
+  opacity: 1; }
+
 .black {
   color: black; }
+
+.input-group, .clear-complete {
+  margin-bottom: 15px; }
